fixed misalign lines

--- a/static/menu_simple.css
+++ b/static/menu_simple.css
@@ -87,7 +87,7 @@ a:active {
     border: 0;
     background-color: #f3f4f6;
     border-bottom: #00b700;
-    border-bottom-width: 2px;
+    border-bottom-width: 4px;
     border-bottom-style: solid;
     padding-bottom: 10px;
     padding-right: 50px;
